Edit using Colaboratory

--- a/predicting_using_CNN.ipynb
+++ b/predicting_using_CNN.ipynb
@@ -688,13 +688,7 @@
       "source": [
         "##Contributors\n",
         "\n",
-        "Noer Ni'mat Syamsul Kabir 400 XP\n",
-        " \n",
-        "Bergabung sejak 09 Nov 2019\n",
-        "\n",
-        "Kota Bandung, Jawa Barat\n",
-        "\n",
-        "Link user:https://www.dicoding.com/users/Noer1711"
+        "Noer Ni'mat Syamsul Kabir "
       ]
     }
   ]
